--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "file-type": "^20.4.1",
     "form-data": "^4.0.2",
     "framer-motion": "^11.13.1",
+    "idb": "^8.0.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "lz-string": "^1.5.0",
